# ngps_flight

./: .gitignore  CHANGELOG.md  Dockerfile.dev  README.md  ros2.repos  ros2_gz.repos  secondary_approach.md  setup.sh
ap_ngps_ros2/: CMakeLists.txt  install_dependencies.sh  package.xml  requirements.txt
ap_ngps_ros2/config/: ngps_config.yaml  rl_ekf.yaml  unified_system_config.yaml
ap_ngps_ros2/launch/: README.md  mjpeg_sat_cam_bridge.launch.py  ngps_localization.launch.py  unified_localization.launch.py  unified_localization_simple.launch.py
ap_ngps_ros2/src/ap_ngps_ros2/: mjpeg_sat_cam_bridge.py  ngps_localization_node.py  pose_assembly_node.py  transformations.py  vio_origin_relay.py
ap_ukf/: README.md
ap_ukf/include/ap_ukf/core/: stateTypes.h
ap_ukf/include/ap_ukf/node/: fusionCore.h  fusionRos.h
ap_ukf/params/: estimator_config.yaml
ap_ukf/src/: fusionCore.cpp  fusionRos.cpp
ap_ukf/test/: localization_tests.cpp
ap_vips/camera_models/: CMakeLists.txt  package.xml
ap_vips/config/ngps_vps/: ngps_vps_cam0_pinhole.yaml  ngps_vps_mono_imu_config.yaml
ap_vips/global_fusion/: CMakeLists.txt  package.xml
ap_vips/loop_fusion/: CMakeLists.txt  package.xml
ap_vips/vins/: CMakeLists.txt  package.xml
ap_vo/: CMakeLists.txt  README.md  package.xml
ap_vo/config/: vo_config.yaml
ap_vo/launch/: vo.launch.py
ap_vo/src/ap_vo/: vo_node.py
ap_vo2/: CMakeLists.txt  README.md  package.xml
ap_vo2/config/: map_match_config.yaml
ap_vo2/launch/: map_match.launch.py
ap_vo2/src/ap_vo2/: map_match_node.py
docs/: CAMERA_IMU_CALIBRATION.md  NON_GPS_NAVIGATION.md
notebooks/: ap_ngps.ipynb
offline/: generate_utm_map.py
